--- a/app/src/main/res/layout/bluetooth_device_item.xml
+++ b/app/src/main/res/layout/bluetooth_device_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
     android:id="@+id/device_item_card"
     style="@style/DeviceItemCard"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
 
@@ -15,50 +16,50 @@
 
             <TextView
                 style="@style/DeviceItemLabel"
-                android:text="@string/detail.name"
-                android:textColor="#4169e1" />
+                android:text="@string/detail.device.label.name"
+                android:textColor="@color/colorAccent"/>
 
             <TextView
                 android:id="@+id/item_name"
-                style="@style/DeviceItemText"
-                android:textColor="#4169e1" />
+                style="@style/DeviceItemLabel.DeviceItemText"
+                android:textColor="@color/colorAccent"/>
         </TableRow>
 
         <TableRow style="@style/DeviceItemTableRow">
 
             <TextView
                 style="@style/DeviceItemLabel"
-                android:text="@string/detail.address"
-                android:textColor="#dc143c" />
+                android:text="@string/detail.device.label.address"
+                android:textColor="@color/colorPrimaryAccent"/>
 
             <TextView
                 android:id="@+id/item_address"
-                style="@style/DeviceItemText"
-                android:textColor="#dc143c" />
+                style="@style/DeviceItemLabel.DeviceItemText"
+                android:textColor="@color/colorPrimaryAccent"/>
         </TableRow>
 
         <TableRow style="@style/DeviceItemTableRow">
 
             <TextView
                 style="@style/DeviceItemLabel"
-                android:text="@string/detail.bond.state" />
+                android:text="@string/detail.device.label.bondState"/>
 
             <TextView
                 android:id="@+id/item_bond"
-                style="@style/DeviceItemText"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/DeviceItemLabel.DeviceItemText"
+                android:textAppearance="?android:attr/textAppearanceSmall"/>
         </TableRow>
 
         <TableRow style="@style/DeviceItemTableRow">
 
             <TextView
                 style="@style/DeviceItemLabel"
-                android:text="@string/detail.type" />
+                android:text="@string/detail.label.type"/>
 
             <TextView
                 android:id="@+id/item_type"
-                style="@style/DeviceItemText"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/DeviceItemLabel.DeviceItemText"
+                android:textAppearance="?android:attr/textAppearanceSmall"/>
 
         </TableRow>
 
@@ -66,12 +67,12 @@
 
             <TextView
                 style="@style/DeviceItemLabel"
-                android:text="@string/detail.rssi" />
+                android:text="@string/detail.device.label.rssi"/>
 
             <TextView
                 android:id="@+id/item_rssi"
-                style="@style/DeviceItemText"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/DeviceItemLabel.DeviceItemText"
+                android:textAppearance="?android:attr/textAppearanceSmall"/>
         </TableRow>
     </TableLayout>
 </android.support.v7.widget.CardView>
