--- a/app/src/main/res/layout/fragment_nursing_main_dashboard.xml
+++ b/app/src/main/res/layout/fragment_nursing_main_dashboard.xml
@@ -44,7 +44,7 @@
                 android:layout_gravity="center_vertical|end"
                 android:background="@null"
                 android:src="@drawable/ic_link"
-                app:cb_color="@color/accent"
+                app:cb_color="@color/link"
                 app:cb_pressedRingWidth="8dip"/>
         </android.support.v7.widget.CardView>
 
@@ -58,7 +58,7 @@
 
 
             <android.support.v7.widget.CardView
-                style="@style/DashBoardCard">
+                style="@style/DashBoardItemFrame.DashBoardCard">
 
                 <RelativeLayout
                     style="@style/DashBoardItemFrame">
@@ -73,13 +73,13 @@
 
                     <TextView
                         android:id="@+id/dashboard.step"
-                        style="@style/DashBoardItemValue"/>
+                        style="@style/DashBoardItemLabel.DashBoardItemValue"/>
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
 
 
             <android.support.v7.widget.CardView
-                style="@style/DashBoardCard">
+                style="@style/DashBoardItemFrame.DashBoardCard">
 
 
                 <RelativeLayout
@@ -95,7 +95,7 @@
 
                     <TextView
                         android:id="@+id/dashboard.calorie"
-                        style="@style/DashBoardItemValue"/>
+                        style="@style/DashBoardItemLabel.DashBoardItemValue"/>
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
@@ -110,7 +110,7 @@
 
 
             <android.support.v7.widget.CardView
-                style="@style/DashBoardCard">
+                style="@style/DashBoardItemFrame.DashBoardCard">
 
 
                 <RelativeLayout
@@ -126,13 +126,13 @@
 
                     <TextView
                         android:id="@+id/dashboard.distance"
-                        style="@style/DashBoardItemValue"/>
+                        style="@style/DashBoardItemLabel.DashBoardItemValue"/>
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
 
 
             <android.support.v7.widget.CardView
-                style="@style/DashBoardCard">
+                style="@style/DashBoardItemFrame.DashBoardCard">
 
                 <RelativeLayout
                     style="@style/DashBoardItemFrame">
@@ -148,7 +148,7 @@
 
                     <TextView
                         android:id="@+id/dashboard.etc"
-                        style="@style/DashBoardItemValue"/>
+                        style="@style/DashBoardItemLabel.DashBoardItemValue"/>
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
