--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,19 +4,21 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorPrimaryOrange">#ff8c00</color>
     <color name="colorAccent">#4169e1</color>
+    <color name="colorPrimaryAccent">#dc143c</color>
     <color name="colorFab">#4169e1</color>
-    <color name="circle_text">#ffffff</color>
 
     <color name="nursingPrimary">#607D8B</color>
     <color name="nursingPrimary_dark">#455A64</color>
     <color name="nursingPrimary_light">#CFD8DC</color>
-    <color name="accent">#8BC34A</color>
+
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
+
     <color name="icons">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
-
+    <color name="link">#8BC34A</color>
     <color name="rippleColor">#00d7ff</color>
+    <color name="circle_text">#ffffff</color>
 
     <color name="stepColor">#00d7ff</color>
     <color name="stepAccent">#2af</color>
@@ -37,6 +39,4 @@
     <color name="etcAccent">#ffc300</color>
     <color name="etcPrimary">#fff56e</color>
     <color name="etcPrimaryDark">#ff9100</color>
-
-
 </resources>
