--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,25 +7,20 @@
     <dimen name="card_margin">16dp</dimen>
     <dimen name="list_item_avatar_size">40dp</dimen>
 
-
     <dimen name="width">10dp</dimen>
-    <dimen name="textSize">70dp</dimen>
-    <dimen name="metricSize">14dp</dimen>
-    <dimen name="metricPaddingY">25dp</dimen>
+    <dimen name="text_size">70dp</dimen>
+    <dimen name="metric_size">14dp</dimen>
+    <dimen name="metric_padding_y">25dp</dimen>
 
     <dimen name="first">10dp</dimen>
     <dimen name="second">15dp</dimen>
     <dimen name="third">20dp</dimen>
 
-
     <dimen name="add_user_input_margin">10dp</dimen>
-
     <dimen name="deviceItem_margin">5dp</dimen>
 
     <dimen name="nav_header_padding">15dp</dimen>
-
     <dimen name="toolbar_drop_shadow">3dp</dimen>
-
     <dimen name="searching_progress_bar">32dp</dimen>
 
     <dimen name="detail_app_bar_layout_height">256dp</dimen>
@@ -36,4 +31,6 @@
     <dimen name="circle_counter_margin">30dp</dimen>
 
     <dimen name="device_characteristic_margin">7dp</dimen>
+
+    <dimen name="circle_button_size">64dp</dimen>
 </resources>
