--- a/app/src/main/res/values/styles_add_user.xml
+++ b/app/src/main/res/values/styles_add_user.xml
@@ -6,7 +6,7 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="AddUserInput" parent="AddUserEditText">
+    <style name="AddUserEditText.AddUserInput">
         <item name="android:layout_margin">@dimen/add_user_input_margin</item>
     </style>
 
