--- a/app/src/main/res/values/styles_dashboard.xml
+++ b/app/src/main/res/values/styles_dashboard.xml
@@ -1,19 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="DashBoardCard">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">180dp</item>
-        <item name="android:layout_gravity">center_vertical</item>
-        <item name="android:layout_margin">15dp</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:background">@null</item>
-        <item name="cardCornerRadius">2dp</item>
-        <item name="cardElevation">7dp</item>
-        <item name="cardPreventCornerOverlap">false</item>
-        <item name="contentPadding">0dp</item>
-    </style>
-
     <style name="DashBoardItemFrame">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -21,14 +8,14 @@
         <item name="android:background">@null</item>
     </style>
 
-    <style name="DashBoardCircleButton">
-        <item name="android:layout_width">64dp</item>
-        <item name="android:layout_height">64dp</item>
-        <item name="android:layout_centerHorizontal">true</item>
-        <item name="android:layout_centerVertical">true</item>
-        <item name="android:background">@null</item>
-        <item name="android:src">@drawable/ic_link</item>
-        <item name="cb_pressedRingWidth">8dp</item>
+    <style name="DashBoardItemFrame.DashBoardCard">
+        <item name="android:layout_height">180dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_margin">15dp</item>
+        <item name="cardCornerRadius">2dp</item>
+        <item name="cardElevation">7dp</item>
+        <item name="cardPreventCornerOverlap">false</item>
+        <item name="contentPadding">0dp</item>
     </style>
 
     <style name="DashBoardItemLabel">
@@ -41,14 +28,19 @@
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
     </style>
 
-    <style name="DashBoardItemValue">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_alignParentBottom">true</item>
-        <item name="android:layout_centerHorizontal">true</item>
+    <style name="DashBoardItemLabel.DashBoardItemValue">
         <item name="android:background">@null</item>
         <item name="android:layout_margin">20dp</item>
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
     </style>
 
+    <style name="DashBoardCircleButton">
+        <item name="android:layout_width">@dimen/circle_button_size</item>
+        <item name="android:layout_height">@dimen/circle_button_size</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:background">@null</item>
+        <item name="android:src">@drawable/ic_link</item>
+        <item name="cb_pressedRingWidth">8dp</item>
+    </style>
 </resources>
