--- a/app/src/main/res/layout/fragment_nursing_main_dashboard.xml
+++ b/app/src/main/res/layout/fragment_nursing_main_dashboard.xml
@@ -65,6 +65,7 @@
 
                     <com.rainbow.kam.bt_scanner.tools.design.CircleButton
                         style="@style/DashBoardCircleButton"
+                        android:src="@drawable/ic_directions_walk_white_36dp"
                         app:cb_color="@color/stepColor"/>
 
                     <TextView
@@ -87,6 +88,7 @@
 
                     <com.rainbow.kam.bt_scanner.tools.design.CircleButton
                         style="@style/DashBoardCircleButton"
+                        android:src="@drawable/ic_whatshot_white_36dp"
                         app:cb_color="@color/calorieColor"/>
 
                     <TextView
@@ -118,6 +120,7 @@
 
                     <com.rainbow.kam.bt_scanner.tools.design.CircleButton
                         style="@style/DashBoardCircleButton"
+                        android:src="@drawable/ic_beenhere_white_36dp"
                         app:cb_color="@color/distanceColor"/>
 
                     <TextView
