--- a/app/src/main/res/layout/fragment_nursing_splash_add_user.xml
+++ b/app/src/main/res/layout/fragment_nursing_splash_add_user.xml
@@ -81,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:checked="true"
-                android:text="@string/add.user.men"/>
+                android:text="@string/add.user.man"/>
 
             <RadioButton
                 android:id="@+id/radio_woman"
