--- a/app/src/main/res/values/styles_dashboard.xml
+++ b/app/src/main/res/values/styles_dashboard.xml
@@ -29,7 +29,8 @@
     </style>
 
     <style name="DashBoardItemLabel.DashBoardItemValue">
-        <item name="android:background">@null</item>
+        <item name="android:layout_alignParentTop">false</item>
+        <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_margin">20dp</item>
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
     </style>
@@ -40,7 +41,6 @@
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:background">@null</item>
-        <item name="android:src">@drawable/ic_link</item>
         <item name="cb_pressedRingWidth">8dp</item>
     </style>
 </resources>
