Rename Packages and Classes
Update Manifest and layout context

activity Package :
    - nurse Package -> band Package
        - MainNursingActivity -> BandContentActivity
        - SplashNursingActivity -> BandInitialActivity
    - dev -> development
        - DetailActivity -> DeviceProfileActivity
        - MainActivity 는 유지

adapter Package :
    - detail Package -> profile Package

fragment Package :
    - nurse Package -> band Package
        - main Package -> content Package
        - splash Package -> initial Package
    - dev Package -> development Package

patient Package -> RealmItem Package
    - Band -> RealmBandItem
    - Patient -> RealmPatientItem

--- a/app/src/main/res/layout/activity_nursing_main.xml
+++ b/app/src/main/res/layout/activity_nursing_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
-        tools:context=".activity.nurse.MainNursingActivity">
+        tools:context=".activity.realmBandItem.BandContentActivity">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/nursing_appbar"
