Fix Lint and Change Image Resource
List
    - ic_launcher_arrow_next_32dp
    - ic_link_32dp
    - ic_search_32dp

--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:background="@null"
-        android:src="@drawable/search_icon"
+        android:src="@drawable/ic_search_white_36dp"
         app:backgroundTint="@color/nursingPrimary"
         app:layout_anchor="@id/toolbar"
         app:layout_anchorGravity="bottom|right|end"/>
