--- a/app/src/main/res/layout/fragment_nursing_main_dashboard.xml
+++ b/app/src/main/res/layout/fragment_nursing_main_dashboard.xml
@@ -43,7 +43,7 @@
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical|end"
                 android:background="@null"
-                android:src="@drawable/ic_link"
+                android:src="@drawable/ic_link_white_36dp"
                 app:cb_color="@color/link"
                 app:cb_pressedRingWidth="8dip"/>
         </android.support.v7.widget.CardView>
