--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,11 +15,11 @@
         <menu>
             <item
                 android:id="@+id/nav_link1"
-                android:icon="@drawable/ic_link"
+                android:icon="@drawable/ic_link_white_36dp"
                 android:title="@string/menu.main.link"/>
             <item
                 android:id="@+id/nav_link2"
-                android:icon="@drawable/ic_link"
+                android:icon="@drawable/ic_link_white_36dp"
                 android:title="@string/menu.main.link"/>
         </menu>
     </item>
