Update DeviceAdapter Data Structure
MainActivity / SelectDeviceDialogFragment :
    - addDevice 메서드 제거
    - addDevice 내부 코드를 DeviceAdapter 의 add 로 이동
    - selectDeviceItemLinkedHashMap 제거

DeviceAdapter :
    - ArrayList 대신 LinkedHashMap 이용
    - 리스트 포지션 체크 주석 제거
    - OnClickListener 추가

--- a/app/src/main/res/layout/detail_bluetooth_characteristics_item.xml
+++ b/app/src/main/res/layout/detail_bluetooth_characteristics_item.xml
@@ -7,9 +7,9 @@
     <LinearLayout style="@style/DetailItemFrame">
 
         <TextView
-            android:id="@+id/detail_child_list_item_characteristics_title"
+            android:id="@+id/detail_child_list_item_characteristics_name"
             style="@style/DetailItemTextView"
-            android:text="@string/detail.child.list.item.characteristics.title"
+            android:text="@string/detail.child.list.item.characteristics.name"
             android:textSize="20sp" />
 
         <TextView
