--- a/app/src/main/res/layout/a_main.xml
+++ b/app/src/main/res/layout/a_main.xml
@@ -9,7 +9,7 @@
     android:fitsSystemWindows="true">
 
 
-    <include layout="@layout/activity_main_content"/>
+    <include layout="@layout/v_main_content"/>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -17,6 +17,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/activity_main_nav_header"
+        app:headerLayout="@layout/v_main_nav_header"
         app:menu="@menu/menu_main"/>
 </android.support.v4.widget.DrawerLayout>
