--- a/app/src/main/res/layout/a_band_init.xml
+++ b/app/src/main/res/layout/a_band_init.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -10,13 +11,12 @@
         android:background="@null">
 
         <ScrollView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@null">
 
             <LinearLayout
+                android:id="@+id/nursing_init_group"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
