--- a/app/src/main/res/layout/v_main_content.xml
+++ b/app/src/main/res/layout/v_main_content.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@null"
-    tools:context=".activity.development.MainActivity">
+    tools:context=".activity.profile.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
