--- a/app/src/main/res/layout/v_main_content.xml
+++ b/app/src/main/res/layout/v_main_content.xml
@@ -35,17 +35,25 @@
         app:layout_anchor="@id/toolbar"
         app:layout_anchorGravity="bottom|center"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/main_swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
         android:foreground="?android:windowContentOverlay"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            >
 
-    </android.support.v7.widget.RecyclerView>
 
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabSearch"
@@ -58,11 +66,6 @@
         app:layout_anchor="@id/toolbar"
         app:layout_anchorGravity="bottom|right|end"/>
 
-
-    <ProgressBar
-        android:id="@+id/searching_progress_bar"
-        style="@style/SearchingProgressBar"
-        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/no_device_textView"
