Update ControlFragment Scrolling and EditText Sync
ControlFragment :
    - Read 시 넘어온 Data 가 뷰에서 짤리는 현상 발생
    -> f_profile_control.xml 의 최상위 뷰에 NestedScrollView 를 추가

    - 타 Characteristic 선택시 ControlFragment 의 EditText 내용이 유지되는 현상 발견
    -> init 메서드는 유지하고 onControlReady 콜백을 onViewCreated 대신 onResume 에서 Call

--- a/app/src/main/res/layout/f_profile_control.xml
+++ b/app/src/main/res/layout/f_profile_control.xml
@@ -1,197 +1,213 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/details_characteristic"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:clickable="true"
-              android:orientation="vertical">
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp">
-
-        <TableRow style="@style/DeviceTableRaw">
-
-            <TextView
-                style="@style/DeviceCharacteristicInfoLabel"
-                android:text="@string/detail.label.peripheral"/>
-
-            <TextView
-                android:id="@+id/characteristic_device_name"
-                style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
-
-        </TableRow>
-
-        <TableRow style="@style/DeviceTableRaw">
-
-            <TextView
-                style="@style/DeviceCharacteristicInfoLabel.DeviceCharacteristicSubInfoLabel"
-                android:text="@string/detail.device.label.address"/>
-
-            <TextView
-                android:id="@+id/characteristic_device_address"
-                style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
-        </TableRow>
-
-        <TableRow style="@style/DeviceTableRaw">
-
-            <TextView
-                style="@style/DeviceCharacteristicInfoLabel"
-                android:text="@string/detail.label.service"/>
-
-            <TextView
-                android:id="@+id/characteristic_service_name"
-                style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
-
-        </TableRow>
-
-        <TableRow style="@style/DeviceTableRaw">
-
-            <TextView
-                style="@style/DeviceCharacteristicInfoLabel.DeviceCharacteristicSubInfoLabel"
-                android:text="@string/detail.label.uuid"/>
-
-            <TextView
-                android:id="@+id/characteristic_service_uuid"
-                style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
-
-        </TableRow>
-
-        <TableRow style="@style/DeviceTableRaw">
-
-            <TextView
-                style="@style/DeviceCharacteristicInfoLabel"
-                android:text="@string/detail.label.characteristic"/>
-
-            <TextView
-                android:id="@+id/characteristic_detail.name"
-                style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
-
-        </TableRow>
-
-        <TableRow style="@style/DeviceTableRaw">
-
-            <TextView
-                style="@style/DeviceCharacteristicInfoLabel.DeviceCharacteristicSubInfoLabel"
-                android:text="@string/detail.label.uuid"/>
-
-            <TextView
-                android:id="@+id/characteristic_detail.uuid"
-                style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
-
-        </TableRow>
-
-        <TableRow style="@style/DeviceTableRaw">
-
-            <TextView
-                style="@style/DeviceCharacteristicInfoLabel"
-                android:text="@string/detail.label.type"/>
-
-            <TextView
-                android:id="@+id/characteristic_detail.type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginStart="5dp"
-                android:layout_weight="1"/>
-
-        </TableRow>
-
-        <TableRow style="@style/DeviceTableRaw">
-
-            <TextView
-                style="@style/DeviceCharacteristicInfoLabel"
-                android:text="@string/detail.label.peripheral"/>
-
-            <TextView
-                android:id="@+id/characteristic_detail.properties"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginStart="5dp"
-                android:layout_weight="1"/>
-
-        </TableRow>
-
-    </TableLayout>
+<android.support.v4.widget.NestedScrollView
+    android:id="@+id/details_characteristic"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@null">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:clickable="true"
+        android:orientation="vertical">
 
-        <ToggleButton
-            android:id="@+id/characteristic_detail.notification_switcher"
-            style="@style/DeviceCharacteristicButton"
-            android:text="@string/detail.button.toggle"
-            android:textOff="Notification"
-            android:textOn="Notification"/>
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:padding="5dp">
 
-        <Button
-            android:id="@+id/characteristic_detail.read_btn"
-            style="@style/DeviceCharacteristicButton"
-            android:text="@string/detail.button.read"/>
+            <TableRow style="@style/DeviceTableRaw">
 
-        <Button
-            android:id="@+id/characteristic_detail.write_btn"
-            style="@style/DeviceCharacteristicButton"
-            android:text="@string/detail.button.write"/>
+                <TextView
+                    style="@style/DeviceCharacteristicInfoLabel"
+                    android:text="@string/detail.label.peripheral"/>
+
+                <TextView
+                    android:id="@+id/characteristic_device_name"
+                    style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
+
+            </TableRow>
+
+            <TableRow style="@style/DeviceTableRaw">
+
+                <TextView
+                    style="@style/DeviceCharacteristicInfoLabel.DeviceCharacteristicSubInfoLabel"
+                    android:text="@string/detail.device.label.address"/>
+
+                <TextView
+                    android:id="@+id/characteristic_device_address"
+                    style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
+            </TableRow>
+
+            <TableRow style="@style/DeviceTableRaw">
+
+                <TextView
+                    style="@style/DeviceCharacteristicInfoLabel"
+                    android:text="@string/detail.label.service"/>
+
+                <TextView
+                    android:id="@+id/characteristic_service_name"
+                    style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
+
+            </TableRow>
+
+            <TableRow style="@style/DeviceTableRaw">
+
+                <TextView
+                    style="@style/DeviceCharacteristicInfoLabel.DeviceCharacteristicSubInfoLabel"
+                    android:text="@string/detail.label.uuid"/>
+
+                <TextView
+                    android:id="@+id/characteristic_service_uuid"
+                    style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
+
+            </TableRow>
+
+            <TableRow style="@style/DeviceTableRaw">
+
+                <TextView
+                    style="@style/DeviceCharacteristicInfoLabel"
+                    android:text="@string/detail.label.characteristic"/>
+
+                <TextView
+                    android:id="@+id/characteristic_detail.name"
+                    style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
+
+            </TableRow>
+
+            <TableRow style="@style/DeviceTableRaw">
+
+                <TextView
+                    style="@style/DeviceCharacteristicInfoLabel.DeviceCharacteristicSubInfoLabel"
+                    android:text="@string/detail.label.uuid"/>
+
+                <TextView
+                    android:id="@+id/characteristic_detail.uuid"
+                    style="@style/DeviceCharacteristicInfo.DeviceCharacteristicSubInfo"/>
+
+            </TableRow>
+
+            <TableRow style="@style/DeviceTableRaw">
+
+                <TextView
+                    style="@style/DeviceCharacteristicInfoLabel"
+                    android:text="@string/detail.label.type"/>
+
+                <TextView
+                    android:id="@+id/characteristic_detail.type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="1"
+                    android:background="@null"/>
+
+            </TableRow>
+
+            <TableRow style="@style/DeviceTableRaw">
+
+                <TextView
+                    style="@style/DeviceCharacteristicInfoLabel"
+                    android:text="@string/detail.label.peripheral"/>
+
+                <TextView
+                    android:id="@+id/characteristic_detail.properties"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="1"
+                    android:background="@null"/>
+
+            </TableRow>
+
+        </TableLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ToggleButton
+                android:id="@+id/characteristic_detail.notification_switcher"
+                style="@style/DeviceCharacteristicButton"
+                android:text="@string/detail.button.toggle"
+                android:textOff="Notification"
+                android:textOn="Notification"/>
+
+            <Button
+                android:id="@+id/characteristic_detail.read_btn"
+                style="@style/DeviceCharacteristicButton"
+                android:text="@string/detail.button.read"/>
+
+            <Button
+                android:id="@+id/characteristic_detail.write_btn"
+                style="@style/DeviceCharacteristicButton"
+                android:text="@string/detail.button.write"/>
+
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/characteristic_detail.hex_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="">
+
+            <requestFocus/>
+        </EditText>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:background="@null">
+
+            <TableRow style="@style/DeviceTableRaw">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="@string/detail.label.string"
+                    android:textColor="#888"
+                    android:textSize="10sp"/>
+
+                <TextView
+                    android:id="@+id/characteristic_detail.ascii_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="9"
+                    android:background="@null"/>
+
+            </TableRow>
+
+            <TableRow style="@style/DeviceTableRaw">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="@string/detail.label.updated"
+                    android:textColor="#888"
+                    android:textSize="10sp"/>
+
+                <TextView
+                    android:id="@+id/characteristic_detail.timestamp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="9"
+                    android:background="@null"/>
+
+            </TableRow>
+
+        </TableLayout>
 
     </LinearLayout>
-
-    <EditText
-        android:id="@+id/characteristic_detail.hex_value"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="">
-
-        <requestFocus/>
-    </EditText>
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp">
-
-        <TableRow style="@style/DeviceTableRaw">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="@string/detail.label.string"
-                android:textColor="#888"
-                android:textSize="10sp"/>
-
-            <TextView
-                android:id="@+id/characteristic_detail.ascii_value"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_weight="9"/>
-
-        </TableRow>
-
-        <TableRow style="@style/DeviceTableRaw">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="@string/detail.label.updated"
-                android:textColor="#888"
-                android:textSize="10sp"/>
-
-            <TextView
-                android:id="@+id/characteristic_detail.timestamp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_weight="9"/>
-
-        </TableRow>
-
-    </TableLayout>
-
-</LinearLayout>
+</android.support.v4.widget.NestedScrollView>
